# rust_axum

./: Cargo.toml
src/: appctx.rs  error.rs  log.rs  main.rs  model.rs
src/web/: middleware_auth.rs  mod.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
